# satunnaisia-dissonansseja

./: .flaskenv  .gitignore  README.md  config.yml  pyproject.toml  run_dev.bat  run_dev.ps1
client/: .eslintrc  .prettierrc  index.html  package-lock.json  package.json  style.css  tailwind.config.js  tsconfig.json  vite.config.js
client/src/: enums.ts  files.ts  initRoot.ts  initStores.ts  initWindow.ts  main.ts  menu.ts  modules.d.ts  router.ts  stores.d.ts  style.css  types.d.ts  utils.ts
client/src/components/: customSlider.ts  filesMenu.ts  icons.ts  menu.ts  nameTagMenu.ts  parameterSlider.ts  withMenu.ts
client/src/pages/: backendBroken.ts  currentWav.ts  executeSointu.ts  files.ts  instrumentFiles.ts  instruments.ts  login.ts  main.ts  mainMenu.ts  sointuMonitor.ts  testExecuteSointu.ts  unsavedRatings.ts  wavFiles.ts
client/src/utils/: alpine.ts  html.ts  http.ts  icons.ts  math.ts  pages.ts  types.d.ts
migrations/versions/: 166d71a05bcd_forgot_comment_column_for_ratings.py  a2735767b291_add_last_login_to_user_model.py
server/: __init__.py  api.py  app.py  containers.py  db.py  dependency.py  downloader.py  json.py  json_provider.py  pyproject.toml  routes.py  run_dev.ps1  sointu.py  wsgi.py
server/api/: rating.py  sointu.py
server/model/: base.py  error.py  instrument_config.py  instrument_run.py  param_config.py  patch.py  rating.py  sointu_run.py  user.py
server/repositories/: instrument.py  instrument_config.py  rating.py  sointu_run.py  user.py
server/service/: files.py  instruments.py  process.py  socket.py  sointu.py  wav_files.py
server/sointu/: __init__.py  dependency.py  downloader.py  error.py  instrument.py  sointu.py  sointu_command.py  sointu_message.py  unit.py  unit_templates.py  windows_shitistry.py
server/src/: app.py
server/templates/: .gitignore  instrument.yml  sequence.yml
server/utils/: dataclasses.py  error.py  files.py  math.py  wav.py
