[tool.poetry]
name = "satunnaisia-dissonansseja"
version = "0.1.0"
description = ""
authors = ["qm210 <quantenmace@gmail.com>", "nr4 <nr4@z10.info>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
flask-sqlalchemy = "^3.1.1"
cached-path = "^1.5.1"
jinja2 = "^3.1.3"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
